--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,156 +1,116 @@
 * {
-  font-family: JetbrainsMono Nerd Font;
-  font-size: 10px;
-  min-height: 0;
-  padding-right: 2px;
-  padding-left: 2px;
-  padding-bottom: 0px;
+  font-family: "CaskaydiaMono Nerd Font";
+  font-weight: normal;
+  font-size: 12px;
 }
 
 #waybar {
-  background: transparent;
-  color: #c6d0f5;
-  margin: 2px 2px;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  box-shadow: none;
 }
 
-#workspaces {
+#workspaces,
+#window,
+#tray {
+  background-color: #0e0e0e;
+  color: #8a8a8d;
+  padding: 2px 4px;
+  margin-top: 3px;
+  margin-left: 3px;
+  margin-right: 3px;
   border-radius: 5px;
-  margin: 5px;
-  background: #101010;
-  margin-left: 2px;
+  border-width: 0px;
 }
 
-#workspaces button {
-  color: #babbf1;
-  border-radius: 5px;
-  padding: 0.4rem;
-}
-
-#workspaces button.active {
-  color: #99d1db;
-  border-radius: 5px;
-}
-
-button {
-  background: transparent;
-}
-
-#workspaces button:hover {
-  background: #1e1e1e;
-  border: 0px solid transparent;
-}
-
-#custom-music,
-#tray,
-#backlight,
 #clock,
+#custom-power {
+  background-color: #0e0e0e;
+  color: #8a8a8d;
+  margin-top: 3px;
+  margin-right: 3px;
+  padding: 2px 4px;
+  border-radius: 0 5px 5px 0;
+  border-width: 0px;
+}
+
+#network,
+#custom-lock {
+  background-color: #0e0e0e;
+  color: #8a8a8d;
+  margin-top: 3px;
+  margin-left: 6px;
+  padding: 2px 4px;
+  border-radius: 5px 0 0 5px;
+  border-width: 0px;
+}
+
+#custom-reboot,
+#bluetooth,
 #battery,
 #pulseaudio,
-#network,
-#cpu,
-#memory,
-#custom-lock,
-#custom-power,
-#custom-weather,
-#custom-uptime,
-#custom-docker {
-  background-color: #101010;
-  padding: 0.5rem 1rem;
-  margin: 5px 0;
-}
-
-#clock {
-  color: #8caaee;
-  border-radius: 5px;
-}
-
-#custom-weather {
-  color: #8caaee;
-  margin-left: 0.5rem;
-  border-radius: 5px;
-}
-
-#battery {
-  color: #a6d189;
-}
-
-#battery.charging {
-  color: #a6d189;
-}
-
-#battery.warning:not(.charging) {
-  color: #e78284;
-}
-
-#backlight {
-  color: #e5c890;
-}
-
 #backlight,
-#battery {
-  border-radius: 0;
+#custom-temperature,
+#memory,
+#cpu {
+  background-color: #0e0e0e;
+  color: #8a8a8d;
+  margin-top: 3px;
+  padding: 2px 4px;
+  border-width: 0px;
 }
 
-#pulseaudio {
-  color: #ea999c;
-  border-radius: 5px 0px 0px 5px;
+#custom-temperature.critical,
+#pulseaudio.muted {
+  color: #b91c1c;
+  padding-top: 0;
 }
 
-#custom-docker {
-  color: #85c1dc;
+#bluetooth:hover,
+#network:hover,
+/*#tray:hover,*/
+#backlight:hover,
+#battery:hover,
+#pulseaudio:hover,
+#custom-temperature:hover,
+#memory:hover,
+#cpu:hover,
+#clock:hover,
+/* #workspaces:hover, */
+#window:hover {
+  color: #f59e0b;
 }
 
-#custom-music {
-  color: #ca9ee6;
-  border-radius: 5px;
+#custom-lock:hover {
+  color: #b91c1c;
 }
 
-#custom-lock {
-  color: #babbf1;
+#custom-reboot:hover {
+  color: #b91c1c;
 }
 
 #custom-power {
-  margin-right: 1rem;
-  border-radius: 0px 5px 5px 0px;
-  color: #e78284;
+  color: #8a8a8d;
 }
 
-#custom-docker.docker {
-  color: #85c1dc;
+#custom-power:hover {
+  color: #b91c1c;
 }
 
-#custom-docker.docker-none {
-  color: #737994;
+#workspaces button {
+  background-color: #0e0e0e;
+  color: #8a8a8d;
 }
 
-#custom-docker.docker-error {
-  color: #e78284;
+#workspaces button:hover {
+  background-color: #0e0e0e;
+  color: #f59e0b;
 }
 
-#custom-weather.clear {
-  color: #e5c890; /* Sunny yellow */
+#workspaces button.active {
+  color: #f59e0b;
 }
 
-#custom-weather.cloud {
-  color: #99d1db; /* Light blue */
-}
-
-#custom-weather.rain {
-  color: #8caaee; /* Blue */
-}
-
-#custom-weather.snow {
-  color: #c6d0f5; /* White-ish */
-}
-
-#custom-weather.thunder {
-  color: #ca9ee6; /* Purple */
-}
-
-#custom-weather.fog {
-  color: #b0b4bc; /* Gray */
-}
-
-#custom-weather.error {
-  color: #e78284; /* Red */
+#window {
+  font-weight: 500;
 }
